# python_github_actions

./: .gitignore  QUICK_START.md  README.md  RELEASE_NOTES.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  workflow-test.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: developer-workflow.yml  production-release.yml  qa-uat-workflow.yml  simple-ci.yml
docs/: BRANCH_PROTECTION_SETUP.md  IMPLEMENTATION_GUIDE.md  WORKFLOW_GUIDE.md
scripts/: check_sdlc_standards.py  run_local_validation.ps1  run_local_validation.sh
src/: __init__.py  calculator.py
tests/: __init__.py  test_calculator.py
