[metadata]
name = python-cicd-demo
version = 1.0.0
description = Python CI/CD Pipeline Demo with GitHub Actions
author = Your Team
author_email = team@example.com
license = MIT

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .
include = src*

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .venv,
    venv

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
ignore_missing_imports = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    -v
    --cov=src
    --cov-report=html
    --cov-report=term
    --cov-report=xml
    --cov-fail-under=80
    --html=reports/pytest_report.html
    --self-contained-html

[coverage:run]
source = src
omit = 
    */tests/*
    */test_*
    */__init__.py

[coverage:report]
precision = 2
show_missing = True

[isort]
profile = black
line_length = 88

[pydocstyle]
inherit = false
match = .*\.py
match-dir = ^(?!tests|build|dist|\.venv|venv).* 